# bcrypto

./: CMakeCache.txt  CMakeLists.txt  README.md  bcrypto.kdev4  main.cpp
scr/: CMakeLists.txt
scr/arch/: CMakeLists.txt  arch.h
scr/arch/x64/: math.c
scr/crypto/hash/: hash.cpp  hash.h  md5.cpp  md5.h
src/: CMakeLists.txt
src/arch/: CMakeLists.txt  arch.h
src/arch/x64/: CMakeLists.txt  math.c  math.h  types.h
src/crypto/: CMakeLists.txt
src/crypto/hash/: CMakeLists.txt  hash.cpp  hash.h  md5.cpp  md5.h
src/utilities/: CMakeLists.txt  scoped_ptr.cpp  scoped_ptr.h  vectorUtil.h
